--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Witness Words</string>
+
+    <!-- Splash -->
+    <string name="loading_words">Loading words…</string>
+
+    <!-- Main -->
+    <string name="action_go">Go!</string>
+    <string name="error_missing_letters">Please enter all 9 letters</string>
 </resources>
