Add matching word count text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <!-- Main -->
     <string name="action_go">Go!</string>
     <string name="error_missing_letters">Please enter all 9 letters</string>
+    <plurals name="result_count">
+        <item quantity="one">Found %d word</item>
+        <item quantity="other">Found %d words</item>
+    </plurals>
 </resources>
