Refresh the user experience
Remove splash screen. Load words when main activity starts.
Automatically search for words after 9 letters are entered.
Small visual improvements to letter input widget.
Bold 9 letter word instead of uppercasing.
Update colour palette with Witness's colours.
Replace Kotlin Synthetics with View Binding.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,10 @@
 <resources>
     <string name="app_name">Witness Words</string>
 
-    <!-- Splash -->
-    <string name="loading_words">Loading words…</string>
-
-    <!-- Main -->
-    <string name="action_go">Go!</string>
     <string name="action_show">Show</string>
-    <string name="error_missing_letters">Please enter all 9 letters</string>
 
     <plurals name="result_count">
-        <item quantity="one">Found %d word</item>
-        <item quantity="other">Found %d words</item>
+        <item quantity="one">Found %d word!</item>
+        <item quantity="other">Found %d words!</item>
     </plurals>
 </resources>
