--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Witness Words</string>
+    <string name="back_button_description">Back button</string>
 
     <string name="action_show">Show</string>
 
@@ -7,4 +8,6 @@
         <item quantity="one">Found %d word!</item>
         <item quantity="other">Found %d words!</item>
     </plurals>
+
+    <string name="definition_title">Word definition</string>
 </resources>
