Implement custom puzzle generation
Just set the input to a random 9 letter word.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Witness Words</string>
     <string name="back_button_description">Back button</string>
 
+    <string name="action_random">Random</string>
+    <string name="action_clear">Clear</string>
     <string name="action_show">Show</string>
 
     <plurals name="result_count">
